--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+  {% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>{{ title }}</title>
     
     {% block ext_css %}
-    {% load static %}
+  
     <link rel="stylesheet" type="text/css" href=" {% static 'css/bootstrap.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href=" {% static 'css/swiper.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href=" {% static 'css/reset.css' %}"/>
@@ -24,10 +26,10 @@
         {% endblock  %}
        
         {% block  ext_js%}
-         {% load static %}
+
         <script type="text/javascript" src=" {% static 'js/jquery-3.1.1.min.js' %}"></script>
         <script type="text/javascript" src=" {% static 'js/bootstrap.min.js' %}"></script>
-        <script type="text/javascript" src=" {% static 'js/swiper.min.js' %}"></script>
+        {% comment %} <script type="text/javascript" src=" {% static 'js/swiper.min.js' %}"></script> {% endcomment %}
         <script type="text/javascript" src=" {% static 'js/base.js' %}"></script>
         
          {% endblock  %}
