--- a/templates/main/market.html
+++ b/templates/main/market.html
@@ -7,7 +7,99 @@
     <link rel="stylesheet" href="{% static 'axf/main/css/market.css' %}">
     {% endblock  %}
 
+{% block ext_js %}
+    {{block.super}}
+    <script type="text/javascript" src="{% static 'axf/main/js/market.js' %}"></script>
+{% endblock  %}
+{% block content %}
+        <div id ="market">
+            <aside>
+                <ul>
+                    {% for foodtype in foodtypes %}
+                        <li>
+                            <a href="{% url 'axf:market_with_params'  typeid=foodtype.typeid childcid=0 order_rule=0%}"> {{foodtype.typename}}</a>
+                            {% ifequal foodtype.typeid typeid  %}
+                                <span class="yellowSlide"></span>
+                            {% endifequal %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            </aside>
+
+            {% comment %} <div> {% endcomment %}
+                <section>
+                    <nav>
+                        <ul>
+                            <li id='all_types'><span>全部分类 <span class="glyphicon glyphicon-chevron-down"></span></span></li>
+                            <li id="sort_rule"><span>综合排序 <span class="glyphicon glyphicon-chevron-down"></span></span></li>
+                        </ul>
+                    </nav>
+
+                    <menu>
+                        <ul>
+                            {% for goods in  goods_list %}
+                                <li>
+                                    <a>
+                                        <img src="{{goods.productimg}}" alt="{{goods.productlongname}}">
+                                        <div class="shoppingInfo">
+                                            <h6>{{  goods.productlongname}}</h6>
+                                            <p class="detailTag">
+                                                <span>精选</span>
+                                                {% comment %} <span></span> {% endcomment %}
+                                            </p>
+                                            <p class="unit">{{goods.specifics}}</p>
+                                            <p class="price">
+                                                <span>{{goods.price}}</span>
+                                                <s>{{goods.marketprice}}</s>
+                                            </p>
+                                        </div>
+                                    </a>
+                                    <section>
+                                        <button>-</button>
+                                        <span>0</span>
+                                        <button>+</button>
+                                    </section>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <div id="all_types_container">
+                            <div>
+                               {% for foodtypename in foodtype_childname_list %}
+                                    {%ifequal foodtypename.1 childcid%}
+                                        <a href="{% url 'axf:market_with_params' typeid=typeid childcid=foodtypename.1 order_rule=order_rule%}">
+                                            <button class="btn btn-success">{{foodtypename.0}}</button>
+                                        </a>
+                                   {% else %}
+                                        <a href="{% url 'axf:market_with_params' typeid=typeid childcid=foodtypename.1 order_rule=order_rule%}">
+                                            <button class="btn btn-default">{{foodtypename.0}}</button>
+                                        </a>
+                                    {% endifequal%}
+                               {% endfor %}                                
+                            </div>
+                        </div>   
+                        <div id="sort_rule_container">
+                            <div>
+                                {% for order_rule_item in order_rule_list  %}
+                                    {% ifequal order_rule_item.1 order_rule%}
+                                    <a href="{% url 'axf:market_with_params' typeid=typeid childcid=childcid order_rule=order_rule_item.1 %}">
+                                        <button class="btn btn-success">{{order_rule_item.0}}}</button>
+                                    </a>
+                                    {% else%}
+                                    <a href="{% url 'axf:market_with_params' typeid=typeid childcid=childcid order_rule=order_rule_item.1 %}">
+                                        <button class="btn btn-default">{{order_rule_item.0}}}</button>
+                                    </a>
+                                    {%endifequal%}
+                                {% endfor %}                      
+                            </div>
+                        </div>
+                    </menu>
+                </section>
+            {% comment %} </div> {% endcomment %}
+        </div>
+        
+{% endblock  %}
     {% comment %} {% block ext_js %}
         {{block.super}}
         <script type="text/javascript" src="js/swiper.min.js"></script>
     {% endblock  %} {% endcomment %}
+
