--- a/templates/base_main.html
+++ b/templates/base_main.html
@@ -12,6 +12,7 @@
 
    </header>
 {% endblock  %}
+glyphicon glyphicon-heart
 
 {% block footer %}
 
@@ -40,7 +41,7 @@
             <dd>购物车</dd>
         </dl>
     </a>
-    <a href="{% url 'axf:mine' %}" class="mine">
+    <a href="{% url 'axf:mine' %}" class="mine_icon">
         <dl>
             <dt>
                 <span></span>
